fixed spacing error

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ padding-right: 20px
 
 li {
 display: inline;
-margin: 5px;
+margin: 10px;
 
 }
 
